src/objects/LG_ProductTechnicalDetails__c.object
<CustomObject>
    <fields>
        <fullName>LG_InstallationClass__c</fullName>
        <label>Installation Class</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LG_InstallationLeadTime__c</fullName>
        <label>Installation Lead Time</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>LG_InstallationNeeded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Installation Needed</label>
        <type>Checkbox</type>
    </fields>
    <label>Product Technical Details</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Product Technical Detail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Products Technical Details</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>